# cpu-emulator

./: CMakeLists.txt  LICENSE  README.md  claude.md  environment.md
.claude/: settings.local.json
include/: cpu.hpp  decoder.hpp  elf_loader.hpp  executor.hpp
src/: elf_loader.cpp  main.cpp
